--- a/index.html
+++ b/index.html
@@ -1,1 +1,139 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>
+      Victimas de accidentes en Barranquilla - Universidad del Norte
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+  </head>
 
+  <header>
+    <div id="title">
+      <h2>Victimas de accidente en Barranquilla</h2>
+    </div>
+
+    <div id="title2">
+      <h3>Curso de Optimización - Universidad del norte</h3>
+    </div>
+  </header>
+
+  <div class="clearfix"></div>
+
+  <body>
+    <div id="content1">
+      <h1>¡Meet the Team!</h1>
+
+      <div id="teamDesc">
+        <ol>
+          <li>
+            <img class="fotoPersona" src="Fotos/david.jpg" alt="David Meza" />
+            <p>David Meza</p>
+            <p>Desarrollador Web</p>
+          </li>
+          <li>
+            <img
+              class="fotoPersona"
+              src="Fotos/andres.jpeg"
+              alt="Andres Evertsz"
+            />
+            <p>Andres Evertsz</p>
+            <p>Analista de datos</p>
+          </li>
+          <li>
+            <img
+              src="Fotos/unknown.jpg"
+              alt="unknown person"
+              class="fotoPersona"
+            />
+            <p>Cristian Berrio</p>
+            <p>Desarrollador e investigador creativo</p>
+          </li>
+          <li>
+            <img
+              src="Fotos/unknown.jpg"
+              alt="unknown person"
+              class="fotoPersona"
+            />
+            <p>Sebastian Guzman</p>
+            <p>Tester</p>
+          </li>
+        </ol>
+      </div>
+    </div>
+
+    <div class="clearfix"></div>
+
+    <div id="content2">
+      <h1 class="content2parr">Nuestro Dataset Seleccionado</h1>
+      <h3 class="content2parr">
+        Victimas de casos de accidentalidad en Barranquilla (Recopilado de
+        DatosAbiertos)
+      </h3>
+
+      <div id="dataset">
+        <img
+          src="Fotos/Dataset.png"
+          alt="Celdas del dataset seleccionado"
+          id="fotoDF"
+        />
+      </div>
+
+      <div id="descripcion">
+        <h2 id="title_desc">
+          Explicación de la seleccion del Dataset y visualización inicial de los
+          datos en gráficas
+        </h2>
+        <div class="parrafoDesc">
+          <h3>
+            Este dataset fue escogido porque es una opción que nos brinda,
+            debido a su naturaleza una gran herramienta para optimización,
+            gracias a la variedad de variables que contiene.
+          </h3>
+        </div>
+
+        <div class="parrafoDesc">
+          <h3>
+            Nos brinda relevancia por su tema, ya que la accidentalidad es un
+            problema importante en muchas ciudades y Barranquilla no es una
+            excepción.
+          </h3>
+        </div>
+
+        <div class="parrafoDesc">
+          <h3>
+            Podríamos a su vez encontrar y contener la identificación de áreas
+            de alto riesgo, la asignación eficiente de recursos para la
+            prevención de los mismo accidentes y planificar planes de prevención
+            a los mismos.
+          </h3>
+        </div>
+
+        <div id="fotosDesc">
+          <img
+            src="Fotos/VictimasPorSexo.png"
+            alt="Numero de Victimas Por Sexo"
+            class="foto_desc"
+          />
+          <img
+            src="Fotos/VictimasPorClase.png"
+            alt="VictimasPorClase"
+            class="foto_desc"
+          />
+          <img
+            src="Fotos/VictimasPorGravedad.png"
+            alt="VictimasPorClase"
+            class="foto_desc"
+          />
+          <img
+            src="Fotos/VictimasPorMes.png"
+            alt="VictimasPorClase"
+            class="foto_desc"
+          />
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
