--- a/index.html
+++ b/index.html
@@ -1,139 +1,125 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>
-      Victimas de accidentes en Barranquilla - Universidad del Norte
-    </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
-  </head>
 
-  <header>
-    <div id="title">
-      <h2>Victimas de accidente en Barranquilla</h2>
-    </div>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>
+    Victimas de accidentes en Barranquilla - Universidad del Norte
+  </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+</head>
 
-    <div id="title2">
-      <h3>Curso de Optimización - Universidad del norte</h3>
+<header>
+  <div id="title">
+    <h2>Victimas de accidente en Barranquilla</h2>
+  </div>
+
+  <div id="title2">
+    <h3>Curso de Optimización - Universidad del norte</h3>
+  </div>
+</header>
+
+<div class="clearfix"></div>
+
+<body>
+  <div id="content1">
+    <h1>¡Meet the Team!</h1>
+
+    <div id="teamDesc">
+      <ol>
+        <li>
+          <img class="fotoPersona" src="Fotos/david.jpg" alt="David Meza" />
+          <p>David Meza</p>
+          <p>Desarrollador Web</p>
+        </li>
+        <li>
+          <img class="fotoPersona" src="Fotos/andres.jpeg" alt="Andres Evertsz" />
+          <p>Andres Evertsz</p>
+          <p>Analista de datos</p>
+        </li>
+        <li>
+          <img src="Fotos/unknown.jpg" alt="unknown person" class="fotoPersona" />
+          <p>Cristian Berrio</p>
+          <p>Desarrollador e investigador creativo</p>
+        </li>
+        <li>
+          <img src="Fotos/unknown.jpg" alt="unknown person" class="fotoPersona" />
+          <p>Sebastian Guzman</p>
+          <p>Tester</p>
+        </li>
+      </ol>
     </div>
-  </header>
+  </div>
 
   <div class="clearfix"></div>
 
-  <body>
-    <div id="content1">
-      <h1>¡Meet the Team!</h1>
+  <div id="content2">
+    <h1 class="content2parr">Nuestro Dataset Seleccionado</h1>
+    <h3 class="content2parr">
+      Victimas de casos de accidentalidad en Barranquilla (Recopilado de
+      DatosAbiertos)
+    </h3>
 
-      <div id="teamDesc">
-        <ol>
-          <li>
-            <img class="fotoPersona" src="Fotos/david.jpg" alt="David Meza" />
-            <p>David Meza</p>
-            <p>Desarrollador Web</p>
-          </li>
-          <li>
-            <img
-              class="fotoPersona"
-              src="Fotos/andres.jpeg"
-              alt="Andres Evertsz"
-            />
-            <p>Andres Evertsz</p>
-            <p>Analista de datos</p>
-          </li>
-          <li>
-            <img
-              src="Fotos/unknown.jpg"
-              alt="unknown person"
-              class="fotoPersona"
-            />
-            <p>Cristian Berrio</p>
-            <p>Desarrollador e investigador creativo</p>
-          </li>
-          <li>
-            <img
-              src="Fotos/unknown.jpg"
-              alt="unknown person"
-              class="fotoPersona"
-            />
-            <p>Sebastian Guzman</p>
-            <p>Tester</p>
-          </li>
-        </ol>
-      </div>
+    <div id="dataset">
+      <img src="Fotos/Dataset.png" alt="Celdas del dataset seleccionado" id="fotoDF" />
     </div>
 
-    <div class="clearfix"></div>
-
-    <div id="content2">
-      <h1 class="content2parr">Nuestro Dataset Seleccionado</h1>
-      <h3 class="content2parr">
-        Victimas de casos de accidentalidad en Barranquilla (Recopilado de
-        DatosAbiertos)
-      </h3>
-
-      <div id="dataset">
-        <img
-          src="Fotos/Dataset.png"
-          alt="Celdas del dataset seleccionado"
-          id="fotoDF"
-        />
+    <div id="descripcion">
+      <h2 id="title_desc">
+        Explicación de la seleccion del Dataset y visualización inicial de los
+        datos en gráficas
+      </h2>
+      <div class="parrafoDesc">
+        <h3>
+          The dataset "Accidentalidad en Barranquilla - víctimas" (Accidents in Barranquilla - victims) from
+          datos.gov.co is crucial for addressing public safety concerns,
+          transportation planning, policy formulation, research endeavors, community awareness, and resource allocation.
+          By providing comprehensive information about accident victims
+          in Barranquilla, Colombia, this dataset serves as a vital tool for understanding the frequency, nature, and
+          locations of accidents, thereby enabling targeted interventions to reduce accidents and associated harm.
+        </h3>
       </div>
 
-      <div id="descripcion">
-        <h2 id="title_desc">
-          Explicación de la seleccion del Dataset y visualización inicial de los
-          datos en gráficas
-        </h2>
-        <div class="parrafoDesc">
-          <h3>
-            Este dataset fue escogido porque es una opción que nos brinda,
-            debido a su naturaleza una gran herramienta para optimización,
-            gracias a la variedad de variables que contiene.
-          </h3>
-        </div>
+      <div class="parrafoDesc">
+        <h3>
+          Analysis of the data facilitates insights into transportation patterns, infrastructure deficiencies, and
+          factors contributing to accidents,
+          informing the development and evaluation of effective policies aimed at enhancing road safety.
+          Moreover, making this data publicly available raises community awareness about the importance of road safety
+          and encourages safer behaviors while traveling.
+        </h3>
+      </div>
 
-        <div class="parrafoDesc">
-          <h3>
-            Nos brinda relevancia por su tema, ya que la accidentalidad es un
-            problema importante en muchas ciudades y Barranquilla no es una
-            excepción.
-          </h3>
-        </div>
+      <div class="parrafoDesc">
+        <h3>
+          It's important to mention that with this project We could also identify and pinpoint high-risk areas,
+          efficiently allocate resources for their prevention,
+          and plan prevention strategies accordingly.
+        </h3>
+      </div>
+      <div class="parrafoDesc">
+        <h3>
+          The statistical insights derived from the dataset analysis reveal notable patterns regarding accident
+          victimization in Barranquilla. Fluctuations in the quantity of victims over time suggest potential seasonal
+          variations in accident rates, while the distribution of victims across different severity levels and types of
+          accidents underscores the need for targeted interventions and safety measures. Disparities in victim
+          distribution by gender highlight demographic considerations for safety initiatives, while identifying age
+          groups most affected by accidents offers valuable guidance for tailored educational programs and preventive
+          measures. Overall, these insights provide crucial information for policymakers and community stakeholders to
+          formulate effective strategies aimed at improving road safety and reducing the number of accident victims in
+          Barranquilla.
+        </h3>
+      </div>
 
-        <div class="parrafoDesc">
-          <h3>
-            Podríamos a su vez encontrar y contener la identificación de áreas
-            de alto riesgo, la asignación eficiente de recursos para la
-            prevención de los mismo accidentes y planificar planes de prevención
-            a los mismos.
-          </h3>
-        </div>
-
-        <div id="fotosDesc">
-          <img
-            src="Fotos/VictimasPorSexo.png"
-            alt="Numero de Victimas Por Sexo"
-            class="foto_desc"
-          />
-          <img
-            src="Fotos/VictimasPorClase.png"
-            alt="VictimasPorClase"
-            class="foto_desc"
-          />
-          <img
-            src="Fotos/VictimasPorGravedad.png"
-            alt="VictimasPorClase"
-            class="foto_desc"
-          />
-          <img
-            src="Fotos/VictimasPorMes.png"
-            alt="VictimasPorClase"
-            class="foto_desc"
-          />
-        </div>
+      <div id="fotosDesc">
+        <img src="Fotos/VictimasPorSexo.png" alt="Numero de Victimas Por Sexo" class="foto_desc" />
+        <img src="Fotos/VictimasPorClase.png" alt="VictimasPorClase" class="foto_desc" />
+        <img src="Fotos/VictimasPorGravedad.png" alt="VictimasPorClase" class="foto_desc" />
+        <img src="Fotos/VictimasPorMes.png" alt="VictimasPorClase" class="foto_desc" />
       </div>
     </div>
-  </body>
+  </div>
+</body>
 </html>
