--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <p>Analista de datos</p>
         </li>
         <li>
-          <img src="Fotos/unknown.jpg" alt="unknown person" class="fotoPersona" />
+          <img src="Fotos/foto.png" alt="Cristian Berrio" class="fotoPersona" />
           <p>Cristian Berrio</p>
           <p>Desarrollador e investigador creativo</p>
         </li>
