--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>
-    Victimas de accidentes en Barranquilla - Universidad del Norte
+    Information on accident victims in Barranquilla - Universidad del Norte
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
@@ -13,11 +13,11 @@
 
 <header>
   <div id="title">
-    <h2>Victimas de accidente en Barranquilla</h2>
+    <h2>Accident victims in Barranquilla</h2>
   </div>
 
   <div id="title2">
-    <h3>Curso de Optimización - Universidad del norte</h3>
+    <h3>Optimization Course - Universidad del norte</h3>
   </div>
 </header>
 
@@ -32,17 +32,17 @@
         <li>
           <img class="fotoPersona" src="Fotos/david.jpg" alt="David Meza" />
           <p>David Meza</p>
-          <p>Desarrollador Web</p>
+          <p>Web Developer</p>
         </li>
         <li>
           <img class="fotoPersona" src="Fotos/andres.jpeg" alt="Andres Evertsz" />
           <p>Andres Evertsz</p>
-          <p>Analista de datos</p>
+          <p>Data Analist</p>
         </li>
         <li>
           <img src="Fotos/foto.png" alt="Cristian Berrio" class="fotoPersona" />
           <p>Cristian Berrio</p>
-          <p>Desarrollador e investigador creativo</p>
+          <p>Creative investigator and Developer</p>
         </li>
         <li>
           <img src="Fotos/unknown.jpg" alt="unknown person" class="fotoPersona" />
@@ -56,10 +56,9 @@
   <div class="clearfix"></div>
 
   <div id="content2">
-    <h1 class="content2parr">Nuestro Dataset Seleccionado</h1>
+    <h1 class="content2parr">Our selected Dataset</h1>
     <h3 class="content2parr">
-      Victimas de casos de accidentalidad en Barranquilla (Recopilado de
-      DatosAbiertos)
+      Information on accident victims in Barranquilla (from DatosAbiertos)
     </h3>
 
     <div id="dataset">
@@ -68,8 +67,7 @@
 
     <div id="descripcion">
       <h2 id="title_desc">
-        Explicación de la seleccion del Dataset y visualización inicial de los
-        datos en gráficas
+        Explanation from our Database and brief visualization of the data
       </h2>
       <div class="parrafoDesc">
         <h3>
@@ -78,7 +76,7 @@
           transportation planning, policy formulation, research endeavors, community awareness, and resource allocation.
           By providing comprehensive information about accident victims
           in Barranquilla, Colombia, this dataset serves as a vital tool for understanding the frequency, nature, and
-          locations of accidents, thereby enabling targeted interventions to reduce accidents and associated harm.
+          locations of accidents, therefore enabling targeted interventions to reduce accidents and associated harm.
         </h3>
       </div>
 
