--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <p>Creative investigator and Developer</p>
         </li>
         <li>
-          <img src="Fotos/unknown.jpg" alt="unknown person" class="fotoPersona" />
+          <img src="Fotos/sebastian.jpg" alt="Sebastian Guzman" class="fotoPersona" />
           <p>Sebastian Guzman</p>
           <p>Tester</p>
         </li>
