Corrected a gramatical error in paragraph before one-hot-encoding image

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="parrafoDesc">
           <p>
             <strong
-              >The following image is a representation of some one the
+              >The following image is a representation of some of the
               dataframe's columns with the One-Hot_Encoding technique
             </strong>
           </p>
