Error with good cm route

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         </div>
         <div class="dataset">
           <img
-            src="Fotos/bgood_cm_Norm.png"
+            src="Fotos/good_cm_Norm.png"
             alt="Matriz de confusion del modelo 2"
           />
         </div>
