--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </p>
         </div>
 
-        <div id="fotosDesc">
+        <div class="dataset">
           <img
             src="Fotos/VictimasPorSexo.png"
             alt="Numero de Victimas Por Sexo"
